# terra-oxide

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/arazi/: Cargo.toml  README.md
crates/arazi/src/: heightmap.rs  lib.rs  provider.rs  quantized_mesh.rs
crates/banin/: Cargo.toml  README.md
crates/banin/src/: debug_tiff.rs  grid.rs  lib.rs  main.rs  tiler.rs
crates/courtier/: Cargo.toml  README.md
crates/courtier/src/: archive.rs  auth.rs  authenticated.rs  client.rs  fetch.rs  file.rs  gzip.rs  http.rs  lib.rs  rest.rs  wasm.rs
crates/courtier/src/esri/: basemaps.rs  feature_server.rs  image_server.rs  map_server.rs  mod.rs  scene_server.rs  types.rs
crates/courtier/src/ion/: connection.rs  mod.rs  types.rs
crates/courtier/src/itwin/: connection.rs  mod.rs  types.rs
crates/i3s/: Cargo.toml  README.md
crates/i3s/src/: attributes.rs  bld.rs  cmn.rs  decoder.rs  lib.rs  pcsl.rs  psl.rs  select.rs  urls.rs
crates/kiban/: Cargo.toml  README.md
crates/kiban/src/: async_runtime.rs  camera_motion.rs  dispatch_gate.rs  events.rs  eviction.rs  fade.rs  frame_decision.rs  hooks.rs  layer.rs  lib.rs  load_scheduler.rs  loader.rs  memory_budget.rs  metrics.rs  occlusion.rs  options.rs  scorer.rs  selected_tile.rs  selection_state.rs  strategy.rs  tile_store.rs  traversal.rs  view.rs
crates/kiban/src/loaders/: mod.rs
crates/kiban/src/loaders/cesium/: ellipsoid.rs  implicit.rs  mod.rs  terrain.rs
crates/kiban/src/loaders/i3s/: loader.rs  mod.rs  node_pages.rs
crates/moderu/: Cargo.toml  README.md
crates/moderu/src/: accessor.rs  builder.rs  compaction.rs  copyright.rs  extensions.rs  generated.rs  geometry.rs  image.rs  io.rs  lib.rs  merge.rs  metadata.rs  property.rs  sampler.rs  scene.rs  semantics.rs  skirt.rs  texture.rs
crates/moderu/src/codec/: draco.rs  image.rs  ktx2.rs  meshopt.rs  mod.rs  pipeline.rs  spz.rs
crates/moderu/src/reader/: dequantize.rs  error.rs  external_refs.rs  glb.rs  image_ops.rs  khr_texture_transform.rs  mod.rs  uri.rs
crates/moderu/src/writer/: error.rs  glb.rs  mod.rs  writer.rs
crates/orkester/: Cargo.toml  README.md
crates/orkester/src/: ack_signal.rs  block_on.rs  cancellation.rs  channel.rs  combinators.rs  context.rs  error.rs  event.rs  executor.rs  join_set.rs  lib.rs  load_once.rs  scope.rs  semaphore.rs  shared_cell.rs  task.rs  task_cell.rs  thread_pool.rs  timer.rs  work_queue.rs
crates/orkester/tests/: channel.rs  integration.rs  semaphore.rs  system.rs
crates/outil/: Cargo.toml  README.md
crates/outil/src/: cache.rs  codec.rs  fetch_once.rs  io.rs  lib.rs  time.rs  uri.rs
crates/schema-gen/: Cargo.toml
crates/schema-gen/configs/: 3dtiles.json  gltf.json
crates/schema-gen/src/: config.rs  generate.rs  main.rs  schema.rs
crates/sovra/: Cargo.toml  README.md
crates/sovra/src/: basemaps.rs  compositing.rs  credit.rs  engine.rs  event.rs  gltf.rs  hierarchy.rs  lib.rs  overlay.rs  upsample.rs
crates/sovra/src/providers/: arcgis_map_server.rs  azure_maps.rs  bing_maps.rs  google_maps.rs  image_decode.rs  ion.rs  mod.rs  tms.rs  url_template.rs  vekuta.rs  wms.rs  wmts.rs
crates/tairu/: Cargo.toml  README.md
crates/tairu/src/: availability.rs  converters.rs  decoder.rs  ext_mesh_features.rs  generated.rs  implicit_tiling.rs  impls.rs  lib.rs  metadata_query.rs  reader.rs  subtree.rs  tile.rs  writer.rs
crates/terra/: Cargo.toml
crates/terra/src/: bounding_region.rs  cartographic.rs  crs.rs  ellipsoid.rs  globe.rs  lhcs.rs  lib.rs  occluder.rs  projection.rs  sr.rs  terrain_bounds.rs  transforms.rs
crates/terra/tests/: geo.rs
crates/vekuta/: Cargo.toml  README.md
crates/vekuta/src/: document.rs  error.rs  iter.rs  lib.rs  rasterizer.rs  style.rs  types.rs
crates/zukei/: Cargo.toml  README.md
crates/zukei/src/: aabb.rs  attribute_compression.rs  bounds.rs  culling.rs  frustum.rs  intersection.rs  lib.rs  morton.rs  obb.rs  plane.rs  polygon.rs  ray.rs  rectangle.rs  s2.rs  sphere.rs  tiling.rs  transforms.rs  volume.rs
cts/: REAMDE.md  main.go
scripts/: download-copernicus_dsm.ps1  generate-3dtiles.ps1  generate-gltf.ps1  serve-terrain.ps1  vcpkg-hashes.ps1
scripts/i3s/: generate_rust.py  parse_spec.py
