[workspace]
members = [
    "crates/arazi",
    "crates/banin",
    "crates/courtier",
    "crates/i3s",
    "crates/kiban",
    "crates/moderu",
    "crates/orkester",
    "crates/outil",
    "crates/schema-gen",
    "crates/sovra",
    "crates/tairu",
    "crates/terra",
    "crates/vekuta",
    "crates/zukei",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/calebbuffa/terra-oxide"
