[package]
name = "courtier"
edition = "2024"
version = "0.1.0"
license.workspace = true
repository.workspace = true
description = "HTTP fetch, authentication, and platform client infrastructure"

[dependencies]
orkester = { path = "../orkester" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2", features = ["gzip"] }
sha2 = "0.10"
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
