[package]
name = "moderu"
description = "glTF 2.0 data model with vendor extension support"
edition = "2024"
version = "0.1.0"
license.workspace = true
repository.workspace = true
keywords = ["gltf", "3d", "graphics", "scene", "mesh"]
categories = [
    "graphics",
    "game-development",
    "rendering::data-formats",
    "encoding",
]
readme = "README.md"
rust-version = "1.85"

[features]
default = []
draco = ["dep:draco-core", "dep:rayon"]
meshopt = ["dep:meshopt"]
ktx2 = ["dep:ktx2-reader", "dep:basis-universal"]
spz = ["dep:spz"]
image = ["dep:image"]

[dependencies]
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"
glam = { version = "0.32", features = ["std", "bytemuck"] }
outil = { path = "../outil" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1.13", features = ["union", "const_generics"] }
byteorder = "1"
base64 = "0.21"

# Optional codec dependencies (behind feature flags)
draco-core = { git = "https://github.com/Filyus/draco", branch = "api", optional = true, features = [
    "decoder",
    "encoder",
] }
rayon = { version = "1.10", optional = true }
meshopt = { version = "0.6", optional = true }
ktx2-reader = { package = "ktx2", version = "0.4", optional = true }
basis-universal = { version = "0.3", optional = true }
spz = { version = "0.0.6", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
