[package]
name = "sovra"
edition = "2024"
version = "0.1.0"
repository.workspace = true
license.workspace = true
description = "Raster overlay system for terra-oxide tile streaming"

[dependencies]
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
log = "0.4"
moderu = { path = "../moderu" }
orkester = { path = "../orkester" }
courtier = { path = "../courtier" }
outil = { path = "../outil" }
terra = { path = "../terra" }
zukei = { path = "../zukei" }
bytemuck = "1"
glam = { version = "0.32", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vekuta = { path = "../vekuta" }
thiserror = "2"
