[package]
name = "tairu"
description = "3D Tiles data model with extension support"
edition = "2024"
version = "0.1.0"
license.workspace = true
repository.workspace = true

[features]
draco = ["dep:draco-core"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = { version = "0.32", features = ["std"] }
terra = { path = "../terra" }
zukei = { path = "../zukei" }
outil = { path = "../outil" }
thiserror = "2"
moderu = { path = "../moderu"}
draco-core = { git = "https://github.com/Filyus/draco", branch = "api", optional = true, features = ["decoder"] }
