[package]
name = "vekuta"
edition = "2024"
version = "0.1.0"
license.workspace = true
repository.workspace = true
description = "GeoJSON parsing and vector data rasterization"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terra = { path = "../terra" }
orkester = { path = "../orkester" }
thiserror = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny-skia = "0.11"
